# cf_ai_query_assistant

./: Cargo.toml  PROMPTS.md  README.md
backend/: .gitignore  Cargo.toml  README.md  wrangler.toml
backend/migrations/app/: 0001_create_demo_tables.sql  0002_insert_dummy_data.sql
backend/migrations/cf-ai/: 0001_create_history_table.sql  0002_insert_dummy_history.sql
backend/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
