[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
sqlparser = { version = "0.59.0", default-features = false}
worker = { version = "0.6", features = ["d1"] }
worker-macros = { version = "0.6" }
